Fixes scrolling on covers shelf

--- a/fedireads/static/format.css
+++ b/fedireads/static/format.css
@@ -488,6 +488,7 @@ dd {
     margin-left: 0;
     position: relative;
     z-index: 1;
+    overflow-y: auto;
 }
 .all-shelves h2 {
     white-space: nowrap;
